--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,57 +1,70 @@
 # 2024-03-12
 
-共 112 条
+共 125 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 08:24:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 09:37:14 GMT+0800 (China Standard Time) -->
+1. [男子生日骑车25公里与李白对酌](https://so.toutiao.com/search?keyword=男子生日骑车25公里与李白对酌)
 1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
-1. [乌方回应马克龙“派兵说”](https://so.toutiao.com/search?keyword=乌方回应马克龙“派兵说”)
 1. [世界从中国两会读出信心和机遇](https://so.toutiao.com/search?keyword=世界从中国两会读出信心和机遇)
 1. [空军副司令：轰-20将很快正式公布](https://so.toutiao.com/search?keyword=空军副司令：轰-20将很快正式公布)
-1. [C罗造点 利雅得胜利无缘亚冠四强](https://so.toutiao.com/search?keyword=C罗造点+利雅得胜利无缘亚冠四强)
-1. [科学家发现可对抗COVID-19的新药](https://so.toutiao.com/search?keyword=科学家发现可对抗COVID-19的新药)
-1. [中伊俄三国海军举行联合演习](https://so.toutiao.com/search?keyword=中伊俄三国海军举行联合演习)
+1. [小米SU 7上市发布会定档3月28日](https://so.toutiao.com/search?keyword=小米SU+7上市发布会定档3月28日)
+1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
+1. [英伟达CEO回应常年穿皮衣](https://so.toutiao.com/search?keyword=英伟达CEO回应常年穿皮衣)
+1. [报告：叙利亚陷入前所未有人道危机](https://so.toutiao.com/search?keyword=报告：叙利亚陷入前所未有人道危机)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
 1. [一对夫妇做短剧每月进账4亿多](https://so.toutiao.com/search?keyword=一对夫妇做短剧每月进账4亿多)
-1. [中方回应莫迪到中印边界东段地区活动](https://so.toutiao.com/search?keyword=中方回应莫迪到中印边界东段地区活动)
-1. [海南东方市委书记田丽霞被查](https://so.toutiao.com/search?keyword=海南东方市委书记田丽霞被查)
 1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
 1. [广西一医院辟谣流脑疫苗接种通知](https://so.toutiao.com/search?keyword=广西一医院辟谣流脑疫苗接种通知)
+1. [代表谈教育怎么打破越减越负的怪圈](https://so.toutiao.com/search?keyword=代表谈教育怎么打破越减越负的怪圈)
 1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
+1. [掘金主帅：我们的目标不是西部第一](https://so.toutiao.com/search?keyword=掘金主帅：我们的目标不是西部第一)
 1. [景区回应女子跪在开封府大堂嚎哭](https://so.toutiao.com/search?keyword=景区回应女子跪在开封府大堂嚎哭)
-1. [巴黎世家胶带手镯好看吗](https://so.toutiao.com/search?keyword=巴黎世家胶带手镯好看吗)
 1. [房东嫌租客没打扫卫生扣全部押金](https://so.toutiao.com/search?keyword=房东嫌租客没打扫卫生扣全部押金)
-1. [河南方城三腿白狐已安置进动物园](https://so.toutiao.com/search?keyword=河南方城三腿白狐已安置进动物园)
-1. [湖南吉首一工厂起火致2死4伤](https://so.toutiao.com/search?keyword=湖南吉首一工厂起火致2死4伤)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [中伊俄三国海军举行联合演习](https://so.toutiao.com/search?keyword=中伊俄三国海军举行联合演习)
+1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
+1. [乌方回应马克龙“派兵说”](https://so.toutiao.com/search?keyword=乌方回应马克龙“派兵说”)
+1. [日本房价垮掉的后果是什么](https://so.toutiao.com/search?keyword=日本房价垮掉的后果是什么)
+1. [曝俄海军司令被解职 克宫拒绝置评](https://so.toutiao.com/search?keyword=曝俄海军司令被解职+克宫拒绝置评)
+1. [海南东方市委书记田丽霞被查](https://so.toutiao.com/search?keyword=海南东方市委书记田丽霞被查)
+1. [“走路去深圳北站爷爷”被行拘](https://so.toutiao.com/search?keyword=“走路去深圳北站爷爷”被行拘)
+1. [巴黎世家胶带手镯好看吗](https://so.toutiao.com/search?keyword=巴黎世家胶带手镯好看吗)
+1. [建议对满65岁无养老金人群发养老金](https://so.toutiao.com/search?keyword=建议对满65岁无养老金人群发养老金)
+1. [C罗造点 利雅得胜利无缘亚冠四强](https://so.toutiao.com/search?keyword=C罗造点+利雅得胜利无缘亚冠四强)
 1. [看涨英伟达的ETF吸金规模创纪录](https://so.toutiao.com/search?keyword=看涨英伟达的ETF吸金规模创纪录)
+1. [女子手提袋装25万美元出境被查](https://so.toutiao.com/search?keyword=女子手提袋装25万美元出境被查)
+1. [A股新能源发力 踏空者怎么办](https://so.toutiao.com/search?keyword=A股新能源发力+踏空者怎么办)
+1. [引争议后阿根廷总统放弃给自己加薪](https://so.toutiao.com/search?keyword=引争议后阿根廷总统放弃给自己加薪)
+1. [市委书记通报被查当天 新书记就任](https://so.toutiao.com/search?keyword=市委书记通报被查当天+新书记就任)
 1. [黄金价格持续上涨说明什么](https://so.toutiao.com/search?keyword=黄金价格持续上涨说明什么)
+1. [男子欠钱不还去旅游 止步候车大厅](https://so.toutiao.com/search?keyword=男子欠钱不还去旅游+止步候车大厅)
+1. [男子买奥迪A4发现打方向盘时有异响](https://so.toutiao.com/search?keyword=男子买奥迪A4发现打方向盘时有异响)
+1. [凯特王妃就P图道歉](https://so.toutiao.com/search?keyword=凯特王妃就P图道歉)
+1. [哺乳期教师拒当清洁工被解雇](https://so.toutiao.com/search?keyword=哺乳期教师拒当清洁工被解雇)
+1. [提车加收10万？顾客可要求退一赔三](https://so.toutiao.com/search?keyword=提车加收10万？顾客可要求退一赔三)
+1. [五菱扬光正式上市 售7.18万元起](https://so.toutiao.com/search?keyword=五菱扬光正式上市+售7.18万元起)
+1. [河南方城三腿白狐已安置进动物园](https://so.toutiao.com/search?keyword=河南方城三腿白狐已安置进动物园)
+1. [中方回应莫迪到中印边界东段地区活动](https://so.toutiao.com/search?keyword=中方回应莫迪到中印边界东段地区活动)
+1. [博主：理想汽车需要倾听用户的声音](https://so.toutiao.com/search?keyword=博主：理想汽车需要倾听用户的声音)
+1. [《龙珠》为何能火40年](https://so.toutiao.com/search?keyword=《龙珠》为何能火40年)
+1. [英伟达为什么越涨越便宜](https://so.toutiao.com/search?keyword=英伟达为什么越涨越便宜)
+1. [业主花9万买地下车位盖房被拆除](https://so.toutiao.com/search?keyword=业主花9万买地下车位盖房被拆除)
+1. [社区引进物业 收费涨价150%](https://so.toutiao.com/search?keyword=社区引进物业+收费涨价150%)
+1. [理想MEGA重新改设计还来得及吗](https://so.toutiao.com/search?keyword=理想MEGA重新改设计还来得及吗)
+1. [一汽大众回应女子大闹车展](https://so.toutiao.com/search?keyword=一汽大众回应女子大闹车展)
+1. [你支持清明节调休吗](https://so.toutiao.com/search?keyword=你支持清明节调休吗)
+1. [小罗伯特·唐尼被批无视关继威](https://so.toutiao.com/search?keyword=小罗伯特·唐尼被批无视关继威)
+1. [科学家发现可对抗COVID-19的新药](https://so.toutiao.com/search?keyword=科学家发现可对抗COVID-19的新药)
+1. [湖南吉首一工厂起火致2死4伤](https://so.toutiao.com/search?keyword=湖南吉首一工厂起火致2死4伤)
 1. [3名男孩外出游玩被沙体掩埋致死](https://so.toutiao.com/search?keyword=3名男孩外出游玩被沙体掩埋致死)
 1. [俄方：北约已无法隐瞒在乌军事存在](https://so.toutiao.com/search?keyword=俄方：北约已无法隐瞒在乌军事存在)
-1. [男子欠钱不还去旅游 止步候车大厅](https://so.toutiao.com/search?keyword=男子欠钱不还去旅游+止步候车大厅)
-1. [英伟达CEO回应常年穿皮衣](https://so.toutiao.com/search?keyword=英伟达CEO回应常年穿皮衣)
-1. [日本房价垮掉的后果是什么](https://so.toutiao.com/search?keyword=日本房价垮掉的后果是什么)
-1. [凯特王妃就P图道歉](https://so.toutiao.com/search?keyword=凯特王妃就P图道歉)
-1. [女子手提袋装25万美元出境被查](https://so.toutiao.com/search?keyword=女子手提袋装25万美元出境被查)
-1. [提车加收10万？顾客可要求退一赔三](https://so.toutiao.com/search?keyword=提车加收10万？顾客可要求退一赔三)
-1. [一汽大众回应女子大闹车展](https://so.toutiao.com/search?keyword=一汽大众回应女子大闹车展)
-1. [哺乳期教师拒当清洁工被解雇](https://so.toutiao.com/search?keyword=哺乳期教师拒当清洁工被解雇)
-1. [建议对满65岁无养老金人群发养老金](https://so.toutiao.com/search?keyword=建议对满65岁无养老金人群发养老金)
 1. [点读机女孩母亲就发存货视频致歉](https://so.toutiao.com/search?keyword=点读机女孩母亲就发存货视频致歉)
-1. [市委书记通报被查当天 新书记就任](https://so.toutiao.com/search?keyword=市委书记通报被查当天+新书记就任)
-1. [业主花9万买地下车位盖房被拆除](https://so.toutiao.com/search?keyword=业主花9万买地下车位盖房被拆除)
 1. [院士：孩子学习好一定要有个好妈妈](https://so.toutiao.com/search?keyword=院士：孩子学习好一定要有个好妈妈)
-1. [理想MEGA重新改设计还来得及吗](https://so.toutiao.com/search?keyword=理想MEGA重新改设计还来得及吗)
-1. [社区引进物业 收费涨价150%](https://so.toutiao.com/search?keyword=社区引进物业+收费涨价150%)
-1. [你支持清明节调休吗](https://so.toutiao.com/search?keyword=你支持清明节调休吗)
 1. [比亚迪秦L或采用全新刀片电池](https://so.toutiao.com/search?keyword=比亚迪秦L或采用全新刀片电池)
 1. [3岁男孩被拐26年后回家认亲](https://so.toutiao.com/search?keyword=3岁男孩被拐26年后回家认亲)
-1. [小罗伯特·唐尼被批无视关继威](https://so.toutiao.com/search?keyword=小罗伯特·唐尼被批无视关继威)
-1. [代表谈教育怎么打破越减越负的怪圈](https://so.toutiao.com/search?keyword=代表谈教育怎么打破越减越负的怪圈)
-1. [“走路去深圳北站爷爷”被行拘](https://so.toutiao.com/search?keyword=“走路去深圳北站爷爷”被行拘)
 1. [轰20的隐身效果如何](https://so.toutiao.com/search?keyword=轰20的隐身效果如何)
 1. [主持人评提车加收10万：查清利益链](https://so.toutiao.com/search?keyword=主持人评提车加收10万：查清利益链)
 1. [丈夫转账给女服务员 法院判还24万](https://so.toutiao.com/search?keyword=丈夫转账给女服务员+法院判还24万)
-1. [五菱扬光正式上市 售7.18万元起](https://so.toutiao.com/search?keyword=五菱扬光正式上市+售7.18万元起)
 1. [39岁C罗首段亚冠征程：8场6球1助](https://so.toutiao.com/search?keyword=39岁C罗首段亚冠征程：8场6球1助)
 1. [WTT新加坡大满贯国乒女单保持全胜](https://so.toutiao.com/search?keyword=WTT新加坡大满贯国乒女单保持全胜)
 1. [男子以为盗墓笔记是日漫 砸烂签名墙](https://so.toutiao.com/search?keyword=男子以为盗墓笔记是日漫+砸烂签名墙)
