--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,43 +1,62 @@
 # 2024-03-12
 
-共 217 条
+共 232 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 14:07:14 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 15:00:43 GMT+0800 (China Standard Time) -->
 1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
 1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
 1. [各地春耕春管“科技范”满满](https://so.toutiao.com/search?keyword=各地春耕春管“科技范”满满)
 1. [雷军官宣小米SU7本月28日上市](https://so.toutiao.com/search?keyword=雷军官宣小米SU7本月28日上市)
-1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
+1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
 1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
 1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
 1. [钟薛高及创始人被限制高消费](https://so.toutiao.com/search?keyword=钟薛高及创始人被限制高消费)
-1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
-1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
+1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
 1. [多家野生动物园辟谣门票免费](https://so.toutiao.com/search?keyword=多家野生动物园辟谣门票免费)
-1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
+1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
 1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
-1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
+1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
+1. [外卖小哥凌晨狂奔15公里送餐](https://so.toutiao.com/search?keyword=外卖小哥凌晨狂奔15公里送餐)
+1. [美一高中附近发生群殴 1名女孩重伤](https://so.toutiao.com/search?keyword=美一高中附近发生群殴+1名女孩重伤)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
 1. [木卫二日产氧量足够百万人活一天](https://so.toutiao.com/search?keyword=木卫二日产氧量足够百万人活一天)
 1. [媒体：点读机女孩不应“延迟发布”](https://so.toutiao.com/search?keyword=媒体：点读机女孩不应“延迟发布”)
-1. [春天带状疱疹进入高发期](https://so.toutiao.com/search?keyword=春天带状疱疹进入高发期)
-1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
 1. [2024年两会将这样影响你的生活](https://so.toutiao.com/search?keyword=2024年两会将这样影响你的生活)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
+1. [“点读机女孩”需要承担法律责任吗](https://so.toutiao.com/search?keyword=“点读机女孩”需要承担法律责任吗)
+1. [东风“对赌”车型猛士917](https://so.toutiao.com/search?keyword=东风“对赌”车型猛士917)
+1. [物业为阻止业主装吊窗引冲突](https://so.toutiao.com/search?keyword=物业为阻止业主装吊窗引冲突)
 1. [丈夫看店铺监控发现妻子出轨](https://so.toutiao.com/search?keyword=丈夫看店铺监控发现妻子出轨)
-1. [揭波音安全问题的前员工被发现死亡](https://so.toutiao.com/search?keyword=揭波音安全问题的前员工被发现死亡)
-1. [一对夫妇做短剧每月进账4亿多](https://so.toutiao.com/search?keyword=一对夫妇做短剧每月进账4亿多)
-1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
-1. [外卖小哥凌晨狂奔15公里送餐](https://so.toutiao.com/search?keyword=外卖小哥凌晨狂奔15公里送餐)
-1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
-1. [福岛从日本鬼城变成世界伤口](https://so.toutiao.com/search?keyword=福岛从日本鬼城变成世界伤口)
-1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
-1. [山东一公司涉嫌非法吸收公众存款](https://so.toutiao.com/search?keyword=山东一公司涉嫌非法吸收公众存款)
-1. [列车上两女子因孩子哭闹起争执](https://so.toutiao.com/search?keyword=列车上两女子因孩子哭闹起争执)
-1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
 1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
-1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
+1. [国足新帅：对阵新加坡会以自己为主](https://so.toutiao.com/search?keyword=国足新帅：对阵新加坡会以自己为主)
+1. [列车上两女子因孩子哭闹起争执](https://so.toutiao.com/search?keyword=列车上两女子因孩子哭闹起争执)
+1. [武汉一海底捞店内发生斗殴](https://so.toutiao.com/search?keyword=武汉一海底捞店内发生斗殴)
+1. [央广网调查医保缴费标准连年上涨](https://so.toutiao.com/search?keyword=央广网调查医保缴费标准连年上涨)
+1. [雷蒙多宣称要确保尖端技术美有中无](https://so.toutiao.com/search?keyword=雷蒙多宣称要确保尖端技术美有中无)
+1. [鸟山明遗作将于秋季上映](https://so.toutiao.com/search?keyword=鸟山明遗作将于秋季上映)
+1. [中国女子橄榄球6战全胜夺世界冠军](https://so.toutiao.com/search?keyword=中国女子橄榄球6战全胜夺世界冠军)
 1. [任志强履新华福证券 担任总裁助理](https://so.toutiao.com/search?keyword=任志强履新华福证券+担任总裁助理)
+1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
+1. [张红伟已任开封市委常委](https://so.toutiao.com/search?keyword=张红伟已任开封市委常委)
+1. [捷克总统：北约军队去乌“不违法”](https://so.toutiao.com/search?keyword=捷克总统：北约军队去乌“不违法”)
+1. [杨紫琼祝贺石头姐拿奖](https://so.toutiao.com/search?keyword=杨紫琼祝贺石头姐拿奖)
+1. [巴媒：两会显示中国务实姿态](https://so.toutiao.com/search?keyword=巴媒：两会显示中国务实姿态)
+1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
+1. [山东一公司涉嫌非法吸收公众存款](https://so.toutiao.com/search?keyword=山东一公司涉嫌非法吸收公众存款)
+1. [《向往的生活》小羊小不点去世](https://so.toutiao.com/search?keyword=《向往的生活》小羊小不点去世)
+1. [王楚然双开门大衣](https://so.toutiao.com/search?keyword=王楚然双开门大衣)
+1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
+1. [中国新能源车会成为孤岛吗](https://so.toutiao.com/search?keyword=中国新能源车会成为孤岛吗)
+1. [龙狮男篮返回佛山主场惜败上海](https://so.toutiao.com/search?keyword=龙狮男篮返回佛山主场惜败上海)
+1. [朱立伦：周五召开新董事会改选](https://so.toutiao.com/search?keyword=朱立伦：周五召开新董事会改选)
+1. [揭波音安全问题的前员工被发现死亡](https://so.toutiao.com/search?keyword=揭波音安全问题的前员工被发现死亡)
+1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
+1. [揭秘点读机女孩曾关联的MCN公司](https://so.toutiao.com/search?keyword=揭秘点读机女孩曾关联的MCN公司)
+1. [春天带状疱疹进入高发期](https://so.toutiao.com/search?keyword=春天带状疱疹进入高发期)
+1. [一对夫妇做短剧每月进账4亿多](https://so.toutiao.com/search?keyword=一对夫妇做短剧每月进账4亿多)
+1. [福岛从日本鬼城变成世界伤口](https://so.toutiao.com/search?keyword=福岛从日本鬼城变成世界伤口)
 1. [国际乒联公布最新世界排名](https://so.toutiao.com/search?keyword=国际乒联公布最新世界排名)
 1. [港股午评：恒指涨1.7% 小米涨逾9%](https://so.toutiao.com/search?keyword=港股午评：恒指涨1.7%+小米涨逾9%)
 1. [3岁男孩被拐26年后回家认亲](https://so.toutiao.com/search?keyword=3岁男孩被拐26年后回家认亲)
@@ -48,9 +67,6 @@
 1. [快递员拒派送被投诉反威胁客户](https://so.toutiao.com/search?keyword=快递员拒派送被投诉反威胁客户)
 1. [媒体：最无悬念的一届奥斯卡](https://so.toutiao.com/search?keyword=媒体：最无悬念的一届奥斯卡)
 1. [中国企业争锋下一代新型显示技术](https://so.toutiao.com/search?keyword=中国企业争锋下一代新型显示技术)
-1. [山西一煤矿发生溃仓事故5死2失联](https://so.toutiao.com/search?keyword=山西一煤矿发生溃仓事故5死2失联)
-1. [Selina晒6个月大的儿子](https://so.toutiao.com/search?keyword=Selina晒6个月大的儿子)
-1. [汽车应触屏化还是保留物理按键](https://so.toutiao.com/search?keyword=汽车应触屏化还是保留物理按键)
 1. [印度成功试射“烈火-5”型导弹](https://so.toutiao.com/search?keyword=印度成功试射“烈火-5”型导弹)
 1. [央企将在疆投资133个项目](https://so.toutiao.com/search?keyword=央企将在疆投资133个项目)
 1. [二月初三拜文昌 家里出个状元郎](https://so.toutiao.com/search?keyword=二月初三拜文昌+家里出个状元郎)
@@ -187,7 +203,6 @@
 1. [媒体：马克龙“派兵说”撕裂北约](https://so.toutiao.com/search?keyword=媒体：马克龙“派兵说”撕裂北约)
 1. [CNN记者上了菲律宾的海警船](https://so.toutiao.com/search?keyword=CNN记者上了菲律宾的海警船)
 1. [大陆配偶当选国民党中常委](https://so.toutiao.com/search?keyword=大陆配偶当选国民党中常委)
-1. [揭秘点读机女孩曾关联的MCN公司](https://so.toutiao.com/search?keyword=揭秘点读机女孩曾关联的MCN公司)
 1. [阿塞拜疆媒体：美国无法战胜中国](https://so.toutiao.com/search?keyword=阿塞拜疆媒体：美国无法战胜中国)
 1. [杨振斌：营造高校良好创新生态](https://so.toutiao.com/search?keyword=杨振斌：营造高校良好创新生态)
 1. [日本民众举行集会抗议政府排污入海](https://so.toutiao.com/search?keyword=日本民众举行集会抗议政府排污入海)
