--- a/archives/toutiao-search/2024-03-12.md
+++ b/archives/toutiao-search/2024-03-12.md
@@ -1,65 +1,79 @@
 # 2024-03-12
 
-共 338 条
+共 350 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Mar 12 2024 22:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Mar 12 2024 23:00:55 GMT+0800 (China Standard Time) -->
+1. [女子24年后取出10岁时的存款](https://so.toutiao.com/search?keyword=女子24年后取出10岁时的存款)
 1. [新款奔驰长轴距C级上市 售价微涨](https://so.toutiao.com/search?keyword=新款奔驰长轴距C级上市+售价微涨)
-1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
 1. [一组数字带你看中国的绿色奇迹](https://so.toutiao.com/search?keyword=一组数字带你看中国的绿色奇迹)
-1. [女子取出自己10岁时的存款](https://so.toutiao.com/search?keyword=女子取出自己10岁时的存款)
-1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
-1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
-1. [中国将会造多少航母？海军政委回应](https://so.toutiao.com/search?keyword=中国将会造多少航母？海军政委回应)
 1. [网友热议清明调休：摒弃拼凑式假期](https://so.toutiao.com/search?keyword=网友热议清明调休：摒弃拼凑式假期)
-1. [微信朋友圈显示的横线为啥有长有短](https://so.toutiao.com/search?keyword=微信朋友圈显示的横线为啥有长有短)
-1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
+1. [车辆隧道内突然变道加速开车门](https://so.toutiao.com/search?keyword=车辆隧道内突然变道加速开车门)
+1. [男子买老凤祥手镯 剪开发现2根金丝](https://so.toutiao.com/search?keyword=男子买老凤祥手镯+剪开发现2根金丝)
+1. [爸爸癌症去世 3岁儿子又患白血病](https://so.toutiao.com/search?keyword=爸爸癌症去世+3岁儿子又患白血病)
+1. [微信个人号不得发布违禁品售卖信息](https://so.toutiao.com/search?keyword=微信个人号不得发布违禁品售卖信息)
+1. [赵继伟26+10 辽篮力克深圳迎5连胜](https://so.toutiao.com/search?keyword=赵继伟26+10+辽篮力克深圳迎5连胜)
+1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
 1. [男子对女模特从下向上拍 客服回应](https://so.toutiao.com/search?keyword=男子对女模特从下向上拍+客服回应)
 1. [公园把树挖了搞植树节？不实](https://so.toutiao.com/search?keyword=公园把树挖了搞植树节？不实)
 1. [印尼一家四口从22楼跳下自杀](https://so.toutiao.com/search?keyword=印尼一家四口从22楼跳下自杀)
-1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
-1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
-1. [车辆隧道内突然变道加速开车门](https://so.toutiao.com/search?keyword=车辆隧道内突然变道加速开车门)
-1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
-1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
-1. [女主播泼水节遭围攻 同事出手帮助](https://so.toutiao.com/search?keyword=女主播泼水节遭围攻+同事出手帮助)
-1. [名嘴谈台媒又在关注解放军航母动态](https://so.toutiao.com/search?keyword=名嘴谈台媒又在关注解放军航母动态)
-1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
+1. [微信朋友圈显示的横线为啥有长有短](https://so.toutiao.com/search?keyword=微信朋友圈显示的横线为啥有长有短)
 1. [人民网评点读机女孩：打造网红不能造假](https://so.toutiao.com/search?keyword=人民网评点读机女孩：打造网红不能造假)
-1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
-1. [微信：朋友圈不得发布这些内容](https://so.toutiao.com/search?keyword=微信：朋友圈不得发布这些内容)
-1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [媒体：宗馥莉的人生不再有“外挂”](https://so.toutiao.com/search?keyword=媒体：宗馥莉的人生不再有“外挂”)
+1. [普通人该如何防范“X疾病”](https://so.toutiao.com/search?keyword=普通人该如何防范“X疾病”)
+1. [央广网调查农村断缴医保背后](https://so.toutiao.com/search?keyword=央广网调查农村断缴医保背后)
+1. [泽连斯基回应马克龙“派兵”言论](https://so.toutiao.com/search?keyword=泽连斯基回应马克龙“派兵”言论)
+1. [“结婚16年4娃非亲生”当事人已离婚](https://so.toutiao.com/search?keyword=“结婚16年4娃非亲生”当事人已离婚)
+1. [杨紫琼回应奥斯卡颁奖礼上疑遭歧视](https://so.toutiao.com/search?keyword=杨紫琼回应奥斯卡颁奖礼上疑遭歧视)
+1. [律师：点读机女孩事件行为人可判3年](https://so.toutiao.com/search?keyword=律师：点读机女孩事件行为人可判3年)
+1. [孙俪线下活动造型](https://so.toutiao.com/search?keyword=孙俪线下活动造型)
+1. [特朗普：要用加税让中企到美国造车](https://so.toutiao.com/search?keyword=特朗普：要用加税让中企到美国造车)
+1. [烫伤女孩为修复疤痕头部35次注水](https://so.toutiao.com/search?keyword=烫伤女孩为修复疤痕头部35次注水)
+1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
+1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
+1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
+1. [俄军一架载有15人的运输机坠毁](https://so.toutiao.com/search?keyword=俄军一架载有15人的运输机坠毁)
+1. [王心凌演唱会上即兴山东话rap](https://so.toutiao.com/search?keyword=王心凌演唱会上即兴山东话rap)
+1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
+1. [印度乒乓女双再惊世界的背后故事](https://so.toutiao.com/search?keyword=印度乒乓女双再惊世界的背后故事)
+1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
+1. [男子因买彩票中奖被泄露报警](https://so.toutiao.com/search?keyword=男子因买彩票中奖被泄露报警)
+1. [男子酒后“被迫”驾车下高速就被查](https://so.toutiao.com/search?keyword=男子酒后“被迫”驾车下高速就被查)
 1. [金店为何在低收入县城遍地开花](https://so.toutiao.com/search?keyword=金店为何在低收入县城遍地开花)
 1. [女子发探洞视频 官方转发明确要追责](https://so.toutiao.com/search?keyword=女子发探洞视频+官方转发明确要追责)
-1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
-1. [爷爷为给孙子治病天天吃泡面馒头](https://so.toutiao.com/search?keyword=爷爷为给孙子治病天天吃泡面馒头)
-1. [评论员：两会的5个利好消息](https://so.toutiao.com/search?keyword=评论员：两会的5个利好消息)
+1. [物业劝阻老人拉线充电动车被追打](https://so.toutiao.com/search?keyword=物业劝阻老人拉线充电动车被追打)
+1. [美将建一港口距台湾不到200公里](https://so.toutiao.com/search?keyword=美将建一港口距台湾不到200公里)
+1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
+1. [报告称波音737Max飞机质量问题严重](https://so.toutiao.com/search?keyword=报告称波音737Max飞机质量问题严重)
+1. [外交部回应特朗普威胁对华加征关税](https://so.toutiao.com/search?keyword=外交部回应特朗普威胁对华加征关税)
 1. [理想L系命名调整 新增Ultra车型](https://so.toutiao.com/search?keyword=理想L系命名调整+新增Ultra车型)
-1. [男子因买彩票中奖被泄露报警](https://so.toutiao.com/search?keyword=男子因买彩票中奖被泄露报警)
-1. [俄军称在第聂伯河前线摧毁乌军快艇](https://so.toutiao.com/search?keyword=俄军称在第聂伯河前线摧毁乌军快艇)
-1. [俄军一架载有15人的运输机坠毁](https://so.toutiao.com/search?keyword=俄军一架载有15人的运输机坠毁)
-1. [沈阳通报11人身体不适被送医](https://so.toutiao.com/search?keyword=沈阳通报11人身体不适被送医)
-1. [烫伤女孩为修复疤痕头部35次注水](https://so.toutiao.com/search?keyword=烫伤女孩为修复疤痕头部35次注水)
-1. [救护车为避让行人冲破护栏掉进沟里](https://so.toutiao.com/search?keyword=救护车为避让行人冲破护栏掉进沟里)
+1. [两位诺奖得主莫言和古尔纳对谈](https://so.toutiao.com/search?keyword=两位诺奖得主莫言和古尔纳对谈)
+1. [深圳多名学生在校午餐后呕吐腹泻](https://so.toutiao.com/search?keyword=深圳多名学生在校午餐后呕吐腹泻)
+1. [知情人：大马赴杭失联女子已被找到](https://so.toutiao.com/search?keyword=知情人：大马赴杭失联女子已被找到)
+1. [外交部：敦促韩方不要跟风炒作](https://so.toutiao.com/search?keyword=外交部：敦促韩方不要跟风炒作)
+1. [中伊俄海上联合军事演习开幕](https://so.toutiao.com/search?keyword=中伊俄海上联合军事演习开幕)
 1. [宁静回应与纪凌尘搭戏](https://so.toutiao.com/search?keyword=宁静回应与纪凌尘搭戏)
+1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
+1. [女子取出自己10岁时的存款](https://so.toutiao.com/search?keyword=女子取出自己10岁时的存款)
+1. [中国将会造多少航母？海军政委回应](https://so.toutiao.com/search?keyword=中国将会造多少航母？海军政委回应)
+1. [丈夫藏10万练功券被妻子拿去存钱](https://so.toutiao.com/search?keyword=丈夫藏10万练功券被妻子拿去存钱)
+1. [点读机女孩MCN道歉：时间表述纰漏](https://so.toutiao.com/search?keyword=点读机女孩MCN道歉：时间表述纰漏)
+1. [名嘴谈台媒又在关注解放军航母动态](https://so.toutiao.com/search?keyword=名嘴谈台媒又在关注解放军航母动态)
+1. [微信：朋友圈不得发布这些内容](https://so.toutiao.com/search?keyword=微信：朋友圈不得发布这些内容)
+1. [2024研考国家线发布](https://so.toutiao.com/search?keyword=2024研考国家线发布)
+1. [俄军称在第聂伯河前线摧毁乌军快艇](https://so.toutiao.com/search?keyword=俄军称在第聂伯河前线摧毁乌军快艇)
+1. [救护车为避让行人冲破护栏掉进沟里](https://so.toutiao.com/search?keyword=救护车为避让行人冲破护栏掉进沟里)
 1. [官方：点读机女孩视频系去年拍摄](https://so.toutiao.com/search?keyword=官方：点读机女孩视频系去年拍摄)
 1. [张本美和赢球后秀起女团舞](https://so.toutiao.com/search?keyword=张本美和赢球后秀起女团舞)
-1. [深圳多名学生在校午餐后呕吐腹泻](https://so.toutiao.com/search?keyword=深圳多名学生在校午餐后呕吐腹泻)
 1. [媒体：需警惕对点读机女孩发起网暴](https://so.toutiao.com/search?keyword=媒体：需警惕对点读机女孩发起网暴)
-1. [物业劝阻老人拉线充电动车被追打](https://so.toutiao.com/search?keyword=物业劝阻老人拉线充电动车被追打)
 1. [媒体人：伊万谈纪律反映国足老问题](https://so.toutiao.com/search?keyword=媒体人：伊万谈纪律反映国足老问题)
-1. [普通人该如何防范“X疾病”](https://so.toutiao.com/search?keyword=普通人该如何防范“X疾病”)
 1. [养老金相差5000元 上涨金额差多少](https://so.toutiao.com/search?keyword=养老金相差5000元+上涨金额差多少)
 1. [英国偏远山上现神秘金属巨柱](https://so.toutiao.com/search?keyword=英国偏远山上现神秘金属巨柱)
 1. [广州致11人受伤车祸区域已恢复秩序](https://so.toutiao.com/search?keyword=广州致11人受伤车祸区域已恢复秩序)
-1. [知情人：大马赴杭失联女子已被找到](https://so.toutiao.com/search?keyword=知情人：大马赴杭失联女子已被找到)
 1. [中信建投：黄金价格创新高](https://so.toutiao.com/search?keyword=中信建投：黄金价格创新高)
 1. [广州车祸目击者称肇事车撞人后没停](https://so.toutiao.com/search?keyword=广州车祸目击者称肇事车撞人后没停)
-1. [中伊俄海上联合军事演习开幕](https://so.toutiao.com/search?keyword=中伊俄海上联合军事演习开幕)
 1. [黑车变道与白车并行时突然开车门](https://so.toutiao.com/search?keyword=黑车变道与白车并行时突然开车门)
-1. [韩作家称“汉字由韩国人创造”](https://so.toutiao.com/search?keyword=韩作家称“汉字由韩国人创造”)
 1. [船老大为救16人斩断价值36万元蟹笼](https://so.toutiao.com/search?keyword=船老大为救16人斩断价值36万元蟹笼)
-1. [小米汽车回应价格战：已做充分准备](https://so.toutiao.com/search?keyword=小米汽车回应价格战：已做充分准备)
 1. [台当局：解放军联合战备警巡常态化](https://so.toutiao.com/search?keyword=台当局：解放军联合战备警巡常态化)
 1. [一公司被取消装备采购招标代理资格](https://so.toutiao.com/search?keyword=一公司被取消装备采购招标代理资格)
 1. [中方回应日方要求撤销水产进口管制](https://so.toutiao.com/search?keyword=中方回应日方要求撤销水产进口管制)
@@ -79,7 +93,6 @@
 1. [央媒评广西一小学生被扇打拖拽](https://so.toutiao.com/search?keyword=央媒评广西一小学生被扇打拖拽)
 1. [福建龙岩一工地挖出“冬眠”蟒蛇](https://so.toutiao.com/search?keyword=福建龙岩一工地挖出“冬眠”蟒蛇)
 1. [致5人死亡的井下煤仓溃仓事故是什么](https://so.toutiao.com/search?keyword=致5人死亡的井下煤仓溃仓事故是什么)
-1. [女儿汇款单附言被老人剪下珍藏25年](https://so.toutiao.com/search?keyword=女儿汇款单附言被老人剪下珍藏25年)
 1. [美反华议员：中国希望美发生两件事](https://so.toutiao.com/search?keyword=美反华议员：中国希望美发生两件事)
 1. [点读机女孩关联MCN自称孵化刘畊宏](https://so.toutiao.com/search?keyword=点读机女孩关联MCN自称孵化刘畊宏)
 1. [名嘴：蔡英文作孽八年留下个烂摊子](https://so.toutiao.com/search?keyword=名嘴：蔡英文作孽八年留下个烂摊子)
@@ -93,7 +106,6 @@
 1. [点读机女孩需要承担法律责任吗](https://so.toutiao.com/search?keyword=点读机女孩需要承担法律责任吗)
 1. [燃气灶污染比吸入汽车尾气还严重](https://so.toutiao.com/search?keyword=燃气灶污染比吸入汽车尾气还严重)
 1. [花旗银行预测金价或将超过750元](https://so.toutiao.com/search?keyword=花旗银行预测金价或将超过750元)
-1. [为什么日系车在中国市场不香了](https://so.toutiao.com/search?keyword=为什么日系车在中国市场不香了)
 1. [《周处除三害》中九次圣杯概率多大](https://so.toutiao.com/search?keyword=《周处除三害》中九次圣杯概率多大)
 1. [环卫工将垃圾扔院子 报警后才扫走](https://so.toutiao.com/search?keyword=环卫工将垃圾扔院子+报警后才扫走)
 1. [高速爆胎 司机走下高速买了个新的](https://so.toutiao.com/search?keyword=高速爆胎+司机走下高速买了个新的)
